social proof title overflow fix

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -304,7 +304,6 @@
 }
 
 .FeaturesCardTitle h2 {
-    
     font-size: clamp(20px, 8vw, 35px);
     text-align: center;
     font-family: var(--font-space-grotesk);
@@ -588,20 +587,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-image: linear-gradient(
-	to right,
-	#462523 0,
-       	#cb9b51 22%, 
-	#f6e27a 45%,
-	#f6f2c0 50%,
-	#f6e27a 55%,
-	#cb9b51 78%,
-	#462523 100%
-	);
-   color:transparent;
-   -webkit-background-clip:text;
-   background-clip: text; */
-   overflow: hidden;
+    overflow: hidden;
 }
 
 .MultiplierSubTextContainer {
@@ -642,7 +628,7 @@
 
 .SocialProofTitleContainer {
     width: 100%;
-    height: 200px;
+    height: 250px;
     /* border: 1px solid red; */
     display: flex;
     align-items: flex-end;
@@ -656,10 +642,9 @@
     font-family: var(--font-inter);
     font-weight: 700;
     color: black;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
+    display: block;
     text-align: left;
+    overflow: hidden;
 }
 
 .VerticalLogoCarouselContainer {
